20080105 test/Makefile.am: distribute test data files
         (libspectrum_0_4_0-branch).
20080105 TAG: libspectrum_0_4_0 (libspectrum_0_4_0-branch).
20080107 Merge libspectrum_0_4_0-branch changes r3447:3479 to trunk.
20080107 doc/libspectrum.txt: add Microdrive support to feature list (Stuart).
20080109 TODO: remove unused file.
20080127 libspectrum.c: compilation fix for Amiga (part of patch #1712260)
         (Chris Young).
20080217 libspectrum.c: and matching compilation fix for MorphOS (part of patch
         #1712260) (thanks, Q-Master) (Fred).
20080217 libspectrum.c: really fix compilation on MorphOS (update to patch
	 #1712260) (thanks, Q-Master) (Stuart).
20080311 snapshot.c,snap_accessors.txt,szx.c,accessor.pl: add support for
         saving custom machine ROMs in snapshots (szx only so far) (Fred).
20080312 szx.c: don't regard 24k ROM blocks as invalid as they are used in the
         2068s (Fred).
20080312 szx.c: try to avoid memory leak on write of custom ROM block (Fred).
20080315 sna.c,z80.c: note info loss of custom ROM block when writing z80 and
         sna format snapshots (Fred).
20080315 accessor.pl,sna.c,snap_accessors.txt,snapshot.c,szx.c,z80.c: support
         for Beta 128 custom ROMs in snapshots (patch #1844606) (Stuart).
20080319 ide.c: changes to allow DivIDE to support FATware from
         http://www.dusky.sk/zxs/; add ATA/ATAPI commands 0x21, 0x31, 0xA1.
20080319 ide.c: changes to allow DivIDE to support FATware from
         http://www.dusky.sk/zxs/; per-drive status and error registers, return
         0x00 when reading the command status register of a missing drive and
         advance LBA/CHS registers to next sector in seek() only if it is the
         last sector to read/write. 
20080319 ide.c: changes to allow DivIDE to support FATware from
         http://www.dusky.sk/zxs/; improved implementation of INITIALIZE
         DEVICE PARAMETERS command.
20080322 configure.in: add --without-libgcrypt option (Stuart).