@@ -62,7 +62,7 @@ block_free( gpointer data, gpointer user_data );
 static libspectrum_error
 rom_edge( libspectrum_tape_rom_block *block,
           libspectrum_tape_rom_block_state *state,
-          libspectrum_dword *tstates, int *end_of_block );
+          libspectrum_dword *tstates, int *end_of_block, int *flags );
 static libspectrum_error
 rom_next_bit( libspectrum_tape_rom_block *block,
               libspectrum_tape_rom_block_state *state );
@@ -71,7 +71,7 @@ static libspectrum_error
 turbo_edge( libspectrum_tape_turbo_block *block,
             libspectrum_tape_turbo_block_state *state,
             libspectrum_dword *tstates,
-	    int *end_of_block );
+	    int *end_of_block, int *flags );
 static libspectrum_error
 turbo_next_bit( libspectrum_tape_turbo_block *block,
                 libspectrum_tape_turbo_block_state *state );
@@ -89,7 +89,7 @@ pulses_edge( libspectrum_tape_pulses_block *block,
 static libspectrum_error
 pure_data_edge( libspectrum_tape_pure_data_block *block,
                 libspectrum_tape_pure_data_block_state *state,
-		libspectrum_dword *tstates, int *end_of_block );
+		libspectrum_dword *tstates, int *end_of_block, int *flags );
 
 static libspectrum_error
 raw_data_edge( libspectrum_tape_raw_data_block *block,
@@ -308,6 +308,8 @@ const int LIBSPECTRUM_TAPE_FLAGS_STOP48     = 1 << 2; /* Stop tape if in
 const int LIBSPECTRUM_TAPE_FLAGS_NO_EDGE    = 1 << 3; /* Not an edge really */
 const int LIBSPECTRUM_TAPE_FLAGS_LEVEL_LOW  = 1 << 4; /* Set level low */
 const int LIBSPECTRUM_TAPE_FLAGS_LEVEL_HIGH = 1 << 5; /* Set level high */
+const int LIBSPECTRUM_TAPE_FLAGS_LENGTH_SHORT = 1 << 6;
+const int LIBSPECTRUM_TAPE_FLAGS_LENGTH_LONG = 1 << 7;
 
 libspectrum_error
 libspectrum_tape_get_next_edge_internal( libspectrum_dword *tstates,
@@ -333,12 +335,12 @@ libspectrum_tape_get_next_edge_internal( libspectrum_dword *tstates,
     switch( block->type ) {
     case LIBSPECTRUM_TAPE_BLOCK_ROM:
       error = rom_edge( &(block->types.rom), &(it->block_state.rom), tstates,
-                        &end_of_block );
+                        &end_of_block, flags );
       if( error ) return error;
       break;
     case LIBSPECTRUM_TAPE_BLOCK_TURBO:
       error = turbo_edge( &(block->types.turbo), &(it->block_state.turbo), tstates,
-                          &end_of_block );
+                          &end_of_block, flags );
       if( error ) return error;
       break;
     case LIBSPECTRUM_TAPE_BLOCK_PURE_TONE:
@@ -353,7 +355,8 @@ libspectrum_tape_get_next_edge_internal( libspectrum_dword *tstates,
       break;
     case LIBSPECTRUM_TAPE_BLOCK_PURE_DATA:
       error = pure_data_edge( &(block->types.pure_data),
-                              &(it->block_state.pure_data), tstates, &end_of_block);
+                              &(it->block_state.pure_data), tstates,
+			      &end_of_block, flags );
       if( error ) return error;
       break;
     case LIBSPECTRUM_TAPE_BLOCK_RAW_DATA:
@@ -482,7 +485,7 @@ static libspectrum_error
 rom_edge( libspectrum_tape_rom_block *block,
           libspectrum_tape_rom_block_state *state,
           libspectrum_dword *tstates,
-	  int *end_of_block )
+	  int *end_of_block, int *flags )
 {
   int error;
 
@@ -513,6 +516,7 @@ rom_edge( libspectrum_tape_rom_block *block,
   case LIBSPECTRUM_TAPE_STATE_DATA1:
     /* The first edge for a bit of data */
     *tstates = state->bit_tstates;
+    *flags |= ( state->bit_tstates == LIBSPECTRUM_TAPE_TIMING_DATA0 ) ? LIBSPECTRUM_TAPE_FLAGS_LENGTH_SHORT : LIBSPECTRUM_TAPE_FLAGS_LENGTH_LONG;
     /* Followed by the second edge */
     state->state = LIBSPECTRUM_TAPE_STATE_DATA2;
     break;
@@ -520,6 +524,7 @@ rom_edge( libspectrum_tape_rom_block *block,
   case LIBSPECTRUM_TAPE_STATE_DATA2:
     /* The second edge for a bit of data */
     *tstates = state->bit_tstates;
+    *flags |= ( state->bit_tstates == LIBSPECTRUM_TAPE_TIMING_DATA0 ) ? LIBSPECTRUM_TAPE_FLAGS_LENGTH_SHORT : LIBSPECTRUM_TAPE_FLAGS_LENGTH_LONG;
     /* Followed by the next bit of data (or the end of data) */
     error = rom_next_bit( block, state ); if( error ) return error;
     break;
@@ -578,7 +583,7 @@ rom_next_bit( libspectrum_tape_rom_block *block,
 static libspectrum_error
 turbo_edge( libspectrum_tape_turbo_block *block,
             libspectrum_tape_turbo_block_state *state,
-            libspectrum_dword *tstates, int *end_of_block )
+            libspectrum_dword *tstates, int *end_of_block, int *flags )
 {
   int error;
 
@@ -609,6 +614,7 @@ turbo_edge( libspectrum_tape_turbo_block *block,
   case LIBSPECTRUM_TAPE_STATE_DATA1:
     /* The first edge for a bit of data */
     *tstates = state->bit_tstates;
+    *flags |= ( state->bit_tstates == block->bit0_length ) ? LIBSPECTRUM_TAPE_FLAGS_LENGTH_SHORT : LIBSPECTRUM_TAPE_FLAGS_LENGTH_LONG;
     /* Followed by the second edge */
     state->state = LIBSPECTRUM_TAPE_STATE_DATA2;
     break;
@@ -616,6 +622,7 @@ turbo_edge( libspectrum_tape_turbo_block *block,
   case LIBSPECTRUM_TAPE_STATE_DATA2:
     /* The second edge for a bit of data */
     *tstates = state->bit_tstates;
+    *flags |= ( state->bit_tstates == block->bit0_length ) ? LIBSPECTRUM_TAPE_FLAGS_LENGTH_SHORT : LIBSPECTRUM_TAPE_FLAGS_LENGTH_LONG;
     /* Followed by the next bit of data (or the end of data) */
     error = turbo_next_bit( block, state ); if( error ) return error;
     break;
@@ -706,7 +713,7 @@ pulses_edge( libspectrum_tape_pulses_block *block,
 static libspectrum_error
 pure_data_edge( libspectrum_tape_pure_data_block *block,
                 libspectrum_tape_pure_data_block_state *state,
-		libspectrum_dword *tstates, int *end_of_block )
+		libspectrum_dword *tstates, int *end_of_block, int *flags )
 {
   int error;
 
@@ -715,6 +722,7 @@ pure_data_edge( libspectrum_tape_pure_data_block *block,
   case LIBSPECTRUM_TAPE_STATE_DATA1:
     /* The first edge for a bit of data */
     *tstates = state->bit_tstates;
+    *flags |= ( state->bit_tstates == block->bit0_length ) ? LIBSPECTRUM_TAPE_FLAGS_LENGTH_SHORT : LIBSPECTRUM_TAPE_FLAGS_LENGTH_LONG;
     /* Followed by the second edge */
     state->state = LIBSPECTRUM_TAPE_STATE_DATA2;
     break;
@@ -722,6 +730,7 @@ pure_data_edge( libspectrum_tape_pure_data_block *block,
   case LIBSPECTRUM_TAPE_STATE_DATA2:
     /* The second edge for a bit of data */
     *tstates = state->bit_tstates;
+    *flags |= ( state->bit_tstates == block->bit0_length ) ? LIBSPECTRUM_TAPE_FLAGS_LENGTH_SHORT : LIBSPECTRUM_TAPE_FLAGS_LENGTH_LONG;
     /* Followed by the next bit of data (or the end of data) */
     error = libspectrum_tape_pure_data_next_bit( block, state );
     if( error ) return error;
