@@ -17,7 +17,7 @@ complete_edges_list[] =
   { 1710,    2, 0 },	/* Bit 7 */
   {  855,    2, 0 },	/* Bit 8 */
 
-  { 8194368, 1, 1 },	/* Pause */
+  { 8194368, 1, 0 },	/* Pause */
 
   /* Turbo speed data block */
   { 1000,    5, 0 },	/* Pilot */
@@ -41,79 +41,72 @@ complete_edges_list[] =
   {  400,    2, 0 },	/* Byte 4, bit 3 */
   {  789,    2, 0 },	/* Byte 4, bit 4 */
 
-  { 3448972, 1, 1 },	/* Pause */
+  { 3448972, 1, 0 },	/* Pause */
 
   /* Pure tone block */
-  {  535,  665, 0 },
-  {  535,    1, 1 },
+  {  535,  666, 0 },
 
   /* List of pulses */
   {  772,    1, 0 },
   {  297,    1, 0 },
-  {  692,    1, 1 },
+  {  692,    1, 0 },
 
   /* Pure data block */
   { 1639,   16, 0 },	/* Byte 1, bits 1-8 */
   {  552,   16, 0 },	/* Byte 2, bits 1-8 */
   { 1639,   12, 0 },	/* Byte 3, bits 1-6 */
-  { 1935897, 1, 1 },	/* Pause */
+  { 1935897, 1, 0 },	/* Pause */
 
   /* Pause block */
-  { 2159539, 1, 1 },
+  { 2159539, 1, 0 },
 
   /* Group start block */
-  {    0,    1, 1 },
+  {    0,    1, 0 },
 
   /* Group end block */
-  {    0,    1, 1 },
+  {    0,    1, 0 },
 
   /* Jump block */
-  {    0,    1, 1 },
+  {    0,    1, 0 },
 
   /* Pure tone block skipped */
 
   /* Loop start block */
-  {    0,    1, 1 },
+  {    0,    1, 0 },
 
     /* Iteration 1 */
-    {  837,  184, 0 },	/* Pure tone block */
-    {  837,    1, 1 },
-
-    {    0,    1, 1 },	/* Loop end block */
+    {  837,  185, 0 },	/* Pure tone block */
+    {    0,    1, 0 },	/* Loop end block */
 
     /* Iteration 2 */
-    {  837,  184, 0 },	/* Pure tone block */
-    {  837,    1, 1 },
-
-    {    0,    1, 1 },	/* Loop end block */
+    {  837,  185, 0 },	/* Pure tone block */
+    {    0,    1, 0 },	/* Loop end block */
 
     /* Iteration 3 */
-    {  837,  184, 0 },	/* Pure tone block */
-    {  837,    1, 1 },
-
-    {    0,    1, 1 },	/* Loop end block */
+    {  837,  185, 0 },	/* Pure tone block */
+    {    0,    1, 0 },	/* Loop end block */
 
   /* Stop tape if in 48K mode block */
-  {    0,    1, 5 },
+  {    0,    1, 4 },
 
   /* Text description block */
-  {    0,    1, 1 },
+  {    0,    1, 0 },
 
   /* Message block */
-  {    0,    1, 1 },
+  {    0,    1, 0 },
 
   /* Archive info block */
-  {    0,    1, 1 },
+  {    0,    1, 0 },
 
   /* Hardware info block */
-  {    0,    1, 1 },
+  {    0,    1, 0 },
 
   /* Custom info block */
-  {    0,    1, 1 },
+  {    0,    1, 0 },
 
   /* Pure tone block */
   {  820,  940, 0 },
-  {  820,    1, 3 },
+  {  820,    1, 2 },
 
   { -1, 0, 0 }		/* End marker */
 
@@ -122,5 +115,6 @@ complete_edges_list[] =
 test_return_t
 test_15( void )
 {
-  return check_edges( "complete-tzx.tzx", complete_edges_list );
+  return check_edges( "complete-tzx.tzx", complete_edges_list,
+		      LIBSPECTRUM_TAPE_FLAGS_STOP | LIBSPECTRUM_TAPE_FLAGS_STOP48 );
 }
